[gd_scene load_steps=21 format=3 uid="uid://uewqp3n7k41i"]

[ext_resource type="Script" path="res://Scripts/rts_controller.gd" id="1_on3iy"]
[ext_resource type="Material" uid="uid://d0i3q6j44jwns" path="res://Assets/Materials/FloorMat.tres" id="1_rmkwj"]
[ext_resource type="PackedScene" uid="uid://clqu86xw65egc" path="res://Scenes/main_building.tscn" id="2_7prwk"]
[ext_resource type="PackedScene" uid="uid://dlvv5m78c66er" path="res://Scenes/worker.tscn" id="3_0wyw8"]
[ext_resource type="Script" path="res://Scripts/unit_selector.gd" id="3_3oseb"]
[ext_resource type="PackedScene" uid="uid://bj0ggj0l5io4k" path="res://Scenes/unit_building.tscn" id="3_5mmp6"]
[ext_resource type="Texture2D" uid="uid://k7fnbofhk0c2" path="res://Assets/GUI/DetailBar.png" id="5_indwm"]
[ext_resource type="Script" path="res://Scripts/GUI/gui_controller.gd" id="5_seejh"]
[ext_resource type="Texture2D" uid="uid://d2p1j6ypo4vf5" path="res://Assets/GUI/MiniMap_Portrait.png" id="6_0gx3y"]
[ext_resource type="PackedScene" uid="uid://bmxgmx4dafouw" path="res://Scenes/warrior.tscn" id="6_mq2f4"]
[ext_resource type="Texture2D" uid="uid://cligqukgffx0t" path="res://Assets/GUI/SelectionBar.png" id="7_akrgk"]
[ext_resource type="Texture2D" uid="uid://bb8sf1tl1kjka" path="res://Assets/GUI/WorkerImg.jpg" id="8_6xyt6"]
[ext_resource type="Texture2D" uid="uid://djhyxgkv3fwth" path="res://Assets/GUI/MainBuildingImg.jpg" id="12_mx006"]
[ext_resource type="Texture2D" uid="uid://chdqssq55t7ta" path="res://Assets/GUI/rock.png" id="14_sng1s"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_2hpyr"]
sky_top_color = Color(0.317647, 0.454902, 0.745098, 1)
sky_horizon_color = Color(0.654679, 0.631824, 0.736574, 1)
ground_bottom_color = Color(0.301068, 0.0723934, 0.2012, 1)
ground_horizon_color = Color(0.654679, 0.631824, 0.736574, 1)

[sub_resource type="Sky" id="Sky_b8so5"]
sky_material = SubResource("ProceduralSkyMaterial_2hpyr")

[sub_resource type="Environment" id="Environment_qiujt"]
background_mode = 2
sky = SubResource("Sky_b8so5")
tonemap_mode = 2
sdfgi_enabled = true
glow_enabled = true
volumetric_fog_enabled = true
volumetric_fog_density = 0.025
volumetric_fog_detail_spread = 4.25
volumetric_fog_temporal_reprojection_amount = 0.99

[sub_resource type="NavigationMesh" id="NavigationMesh_vex2q"]
vertices = PackedVector3Array(-3.25, 0.75, -4.25, -2.25, 1, -4.75, -2.25, 0.5, -6.5, -1.5, 0.5, -7, -1.5, 0.5, -149.5, -149.5, 0.5, -3.25, -3.5, 0.75, -3.25, -149.5, 0.5, -149.5, 1.5, 0.5, -7, 1.5, 0.5, -149.5, 3, 0.5, -5.25, 3, 0.5, -4.5, 3.75, 0.5, -4.5, 2, 0.5, -6.75, 2.25, 0.5, -5.5, 9.75, 0.5, -5, 10.5, 0.5, -5.75, 4, 0.5, -3.75, 9.75, 0.5, -3.75, 11.75, 0.5, -5.75, 11.75, 0.5, -149.5, 13.25, 0.5, -5.25, 13.25, 0.5, -3.75, 149.5, 0.5, -3.75, 149.5, 0.5, -149.5, -1.25, 1.5, -5.75, -0.75, 1.75, -4.75, -0.75, 1.5, -5.75, 11.25, 0.5, -4.25, 11.25, 0.5, -3.75, 11.75, 0.5, -3.75, 11.75, 0.5, -4.25, -0.25, 4, -4, -0.25, 4, -3.5, 0.25, 4, -3.5, 0.25, 4, -4, 10.25, 0.5, -2.25, 2.5, 0.5, -1.75, 11.75, 0.5, -2.25, 0, 0.5, -1.25, 0, 0.5, 149.5, 11.75, 0.5, 149.5, 13, 0.5, -2.25, 149.5, 0.5, 149.5, -2.5, 0.5, -1.75, -2.5, 0.75, -2.75, -3.5, 0.5, -2.75, -149.5, 0.5, 149.5)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(4, 3, 2), PackedInt32Array(4, 2, 0), PackedInt32Array(0, 6, 4), PackedInt32Array(4, 6, 5), PackedInt32Array(4, 5, 7), PackedInt32Array(4, 9, 3), PackedInt32Array(3, 9, 8), PackedInt32Array(12, 11, 10), PackedInt32Array(13, 10, 14), PackedInt32Array(10, 13, 12), PackedInt32Array(12, 13, 15), PackedInt32Array(15, 13, 16), PackedInt32Array(17, 12, 18), PackedInt32Array(18, 12, 15), PackedInt32Array(13, 8, 16), PackedInt32Array(16, 8, 19), PackedInt32Array(19, 8, 9), PackedInt32Array(19, 9, 20), PackedInt32Array(23, 22, 21), PackedInt32Array(21, 19, 23), PackedInt32Array(23, 19, 20), PackedInt32Array(23, 20, 24), PackedInt32Array(27, 26, 25), PackedInt32Array(31, 30, 28), PackedInt32Array(28, 30, 29), PackedInt32Array(35, 34, 32), PackedInt32Array(32, 34, 33), PackedInt32Array(18, 36, 17), PackedInt32Array(17, 36, 37), PackedInt32Array(36, 38, 37), PackedInt32Array(37, 38, 39), PackedInt32Array(39, 38, 40), PackedInt32Array(40, 38, 41), PackedInt32Array(22, 23, 42), PackedInt32Array(42, 23, 43), PackedInt32Array(42, 43, 41), PackedInt32Array(41, 38, 42), PackedInt32Array(46, 45, 44), PackedInt32Array(5, 6, 46), PackedInt32Array(5, 46, 44), PackedInt32Array(44, 39, 5), PackedInt32Array(5, 39, 40), PackedInt32Array(5, 40, 47)]
geometry_parsed_geometry_type = 1
geometry_collision_mask = 4294967285

[sub_resource type="PlaneMesh" id="PlaneMesh_i3ig2"]
material = ExtResource("1_rmkwj")
size = Vector2(300, 300)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_kscd4"]
data = PackedVector3Array(150, 0, 150, -150, 0, 150, 150, 0, -150, -150, 0, 150, -150, 0, -150, 150, 0, -150)

[node name="World" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qiujt")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.999781, -0.0172799, 0.0118318, 0, 0.564967, 0.825113, -0.0209425, 0.824933, -0.564843, 0, 0, 0)
shadow_enabled = true

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_vex2q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D"]
mesh = SubResource("PlaneMesh_i3ig2")

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D/MeshInstance3D" groups=["surface"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_kscd4")

[node name="MainBuilding" parent="NavigationRegion3D" instance=ExtResource("2_7prwk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.063203, -3.78051)

[node name="UnitBuilding" parent="NavigationRegion3D" instance=ExtResource("3_5mmp6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5664, 0.341799, -3.92)

[node name="RTSController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.573576, 0.819152, 0, -0.819152, 0.573576, 0, 0, 0)
script = ExtResource("1_on3iy")
MOVE_MARGIN = 50
units_in_line = 6
selected_units_limit = 0

[node name="Camera3D" type="Camera3D" parent="RTSController"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 17)

[node name="UnitSelector" type="Control" parent="RTSController"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_3oseb")
select_box_color = Color(0, 1, 1, 0.117647)
select_box_border_color = Color(0.392157, 0.584314, 0.929412, 0.784314)

[node name="UnitsContainer" type="Node3D" parent="."]

[node name="WorkersContainer" type="Node" parent="UnitsContainer"]

[node name="Worker" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.875921, 0.212302, 0.817896)

[node name="Worker2" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000608444, 0.212302, 0.81843)

[node name="Worker3" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.212302, 0)

[node name="Worker4" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.751233, 0.212302, 0)

[node name="Worker5" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.45641, 0.212302, 0.817896)

[node name="Worker6" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.57989, 0.212302, 0.81843)

[node name="Worker7" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.58049, 0.212302, 0)

[node name="Worker8" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.33173, 0.212302, 0)

[node name="Worker9" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.01343, 0.212302, 0.817896)

[node name="Worker10" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.13691, 0.212302, 0.81843)

[node name="Worker11" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.13751, 0.212302, 0)

[node name="Worker12" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.88875, 0.212302, 0)

[node name="Worker13" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.6174, 0.212302, 0.817896)

[node name="Worker14" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.74087, 0.212302, 0.81843)

[node name="Worker15" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.74148, 0.212302, 0)

[node name="Worker16" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.49271, 0.212302, 0)

[node name="Worker17" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.720221, 0.212302, 0.817896)

[node name="Worker18" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.59675, 0.212302, 0.81843)

[node name="Worker19" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.59614, 0.212302, 0)

[node name="Worker20" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.844908, 0.212302, 0)

[node name="Worker21" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.41025, 0.212302, 0.817896)

[node name="Worker22" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.28678, 0.212302, 0.81843)

[node name="Worker23" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.28617, 0.212302, 0)

[node name="Worker24" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.53494, 0.212302, 0)

[node name="Worker25" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.14811, 0.212302, 0.817896)

[node name="Worker26" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.02463, 0.212302, 0.81843)

[node name="Worker27" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.02403, 0.212302, 0)

[node name="Worker28" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.27279, 0.212302, 0)

[node name="Worker29" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.74114, 0.212302, 0.817896)

[node name="Worker30" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.61766, 0.212302, 0.81843)

[node name="Worker31" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.61706, 0.212302, 0)

[node name="Worker32" parent="UnitsContainer/WorkersContainer" instance=ExtResource("3_0wyw8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.86582, 0.212302, 0)

[node name="WarriorContainer" type="Node" parent="UnitsContainer"]

[node name="Warrior" parent="UnitsContainer/WarriorContainer" instance=ExtResource("6_mq2f4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.1868)

[node name="Warrior2" parent="UnitsContainer/WarriorContainer" instance=ExtResource("6_mq2f4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.17211)

[node name="Warrior3" parent="UnitsContainer/WarriorContainer" instance=ExtResource("6_mq2f4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.963661, 0, 2.1868)

[node name="Warrior4" parent="UnitsContainer/WarriorContainer" instance=ExtResource("6_mq2f4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.963661, 0, 3.17211)

[node name="Warrior5" parent="UnitsContainer/WarriorContainer" instance=ExtResource("6_mq2f4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.73784, 0, 2.1868)

[node name="Warrior6" parent="UnitsContainer/WarriorContainer" instance=ExtResource("6_mq2f4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.73784, 0, 3.17211)

[node name="Warrior7" parent="UnitsContainer/WarriorContainer" instance=ExtResource("6_mq2f4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.774177, 0, 2.1868)

[node name="Warrior8" parent="UnitsContainer/WarriorContainer" instance=ExtResource("6_mq2f4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.774177, 0, 3.17211)

[node name="HUD" type="CanvasLayer" parent="."]
layer = 2

[node name="GUIController" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_seejh")

[node name="InfoBar" type="TextureRect" parent="HUD/GUIController"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -496.0
offset_top = -187.0
offset_right = 496.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_indwm")
expand_mode = 1

[node name="MiniMapController" type="TextureRect" parent="HUD/GUIController"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -214.0
offset_right = 288.0
grow_vertical = 0
texture = ExtResource("6_0gx3y")
expand_mode = 1

[node name="SelectionBar" type="TextureRect" parent="HUD/GUIController"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -290.0
offset_top = -202.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("7_akrgk")
expand_mode = 1

[node name="BuildingGrid" type="GridContainer" parent="HUD/GUIController/SelectionBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -80.0
offset_right = 129.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 21
columns = 4

[node name="OptionButton" type="TextureButton" parent="HUD/GUIController/SelectionBar/BuildingGrid"]
custom_minimum_size = Vector2(52, 44)
layout_mode = 2
texture_normal = ExtResource("12_mx006")
ignore_texture_size = true
stretch_mode = 0

[node name="OptionButton2" type="TextureButton" parent="HUD/GUIController/SelectionBar/BuildingGrid"]
custom_minimum_size = Vector2(52, 44)
layout_mode = 2
texture_normal = ExtResource("12_mx006")
ignore_texture_size = true
stretch_mode = 0

[node name="MainUnitImgContainer" type="TextureRect" parent="HUD/GUIController"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 331.0
offset_top = -143.0
offset_right = 449.0
offset_bottom = -38.0
grow_vertical = 0
texture = ExtResource("6_0gx3y")
expand_mode = 1

[node name="MainUnitImg" type="TextureRect" parent="HUD/GUIController/MainUnitImgContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_6xyt6")
expand_mode = 1

[node name="UnitsGrid" type="GridContainer" parent="HUD/GUIController"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -277.0
offset_top = -158.0
offset_right = 442.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
columns = 15

[node name="MineralsContainer" type="VBoxContainer" parent="HUD/GUIController"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -173.0
offset_bottom = 97.0
grow_horizontal = 0

[node name="MineralsTextureRect" type="TextureRect" parent="HUD/GUIController/MineralsContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("14_sng1s")
expand_mode = 1
stretch_mode = 4

[node name="MineralsLabel" type="Label" parent="HUD/GUIController/MineralsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0000"
horizontal_alignment = 1

[connection signal="units_selected" from="RTSController" to="HUD/GUIController" method="_on_rts_controller_units_selected"]
[connection signal="pressed" from="HUD/GUIController/SelectionBar/BuildingGrid/OptionButton" to="HUD/GUIController" method="_on_option_button_pressed"]
[connection signal="pressed" from="HUD/GUIController/SelectionBar/BuildingGrid/OptionButton2" to="HUD/GUIController" method="_on_option_button_2_pressed"]
